função para escolher qual municipio o app deve chamar
